<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#800000f0"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/put_an_image_watermark"
        android:textSize="30sp" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/lv"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingBottom="1.0dip"
        android:paddingLeft="4.0dip"
        android:paddingRight="4.0dip"
        android:paddingTop="5.0dip" >

        <Button
            android:id="@+id/button"
            style="@style/button_text"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/red_button"
            android:text="@string/upload_a_pic" />

        <Button
            android:id="@+id/button_reset"
            style="@style/button_text"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/red_button"
            android:text="@string/reset" />
    </LinearLayout>
    

<ScrollView
    android:id = "@+id/sv"
    android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@id/textView"
        android:layout_above="@id/lv" >
       
        <TableLayout 
            android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    <CheckBox
        android:id="@+id/checkBox_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textBox_check_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/a_customoized_message_in_the_background"
        android:textSize="20sp" />
    </TableRow>
    
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"  >

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="gone"
                    android:layout_span="2" />
    </TableRow>
    
    <TableRow
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"  >

    <CheckBox
        android:id="@+id/checkBox_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textBox_check_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        android:textSize="20sp" />
    </TableRow>
    <TableRow 
        android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="gone" 
        android:layout_span="2"/>
</TableRow>
<TableRow 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"  >
    <CheckBox
        android:id="@+id/checkBox_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textBox_check_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/time"
        android:textSize="20sp" />
    </TableRow>
    <TableRow 
        android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/textView_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="gone"
        android:layout_span="2" />
    </TableRow>
    </TableLayout>
    </ScrollView>

    

    
</RelativeLayout>